fixed lead image on mobile, deleted different image sizes for responsive resolutions

--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -20,13 +20,13 @@
 
 @media screen and (max-width: 1560px) {
 	.lead {
-		background-image: url('./../../images/cover-image-w1560.png');
+		/* background-image: url('./../../images/cover-image-w1560.png'); */
 		padding: 48px 0 0;
 }
 
 @media screen and (max-width: 856px) {
 	.lead {
-		background-image: url('./../../images/cover-image-w856.png');
+		/* background-image: url('./../../images/cover-image-w856.png'); */
 		/* background-position: center right; */
 		/* background-attachment: scroll; */
 	}
